Map translations = {
  'askHelp': {
    'fi': 'Pyydä\napua',
    'en': 'Ask for\nhelp',
  },

  'location': {
    'fi': 'Sijainti',
    'en': 'Location',
  },

  'gpsRequired': {
    'fi': 'Sovellus tarvitsee paikannukseen luvan käyttää sijaintia',
    'en': 'The application needs permission to use your location',
  },
...
  'toSettings': {
    'fi': 'Siirry asetuksiin',
    'en': 'Go to settings',
  },

  'next': {
    'fi': 'Seuraava',
    'en': 'Continue',
  },

  'premiumDialogTitle': {
    'fi': 'Päivitä Premium Käyttäjään avataksesi',
    'en': 'Upgrade to Premium User to unlock'
  },
...
  'premiumDialogButtonText': {
    'fi': 'Mene Käyttäjätietoihin',
    'en': 'Go to User Information'
  },

  'conditions': {
    'fi': 'Lumiolosuhteet Pallaksella',
    'en': 'Snow conditions in Pallas',
  },

  'mapView': {
    'fi': 'Karttanäkymä',
    'en': 'Map view',
  },

  'weather': {
    'fi': 'Sää Pallaksella',
    'en': 'Weather in Pallas',
  },

  'snowDescription': {
    'fi': 'Lumityyppien selitteet',
    'en': 'Snow type definitions',
  },

  'userInfo': {
    'fi': 'Käyttäjätiedot',
    'en': 'User Information',
  },

  'serviceInfo': {
    'fi': 'Tietoa palvelusta',
    'en': 'About the service',
  },

  'appName': {
    'fi': 'Pallaksen Pöllöt',
    'en': 'Pallaksen Pöllöt',
  },

  'privacy': {
    'fi': 'Tietosuojaseloste',
    'en': 'Privacy policy',
  },

  'language': {
    'fi': 'SUOMI',
    'en': 'ENGLISH  ',
  },

  'gpsSharing': {
    'fi': 'Sijaintitiedon jakaminen',
    'en': 'Location sharing',
...
  'allowSharing': {
    'fi': 'SALLI JAKO',
    'en': 'ALLOW SHARING',
  },

  'noLocationShare': {
    'fi': 'Älä salli sijaintia',
    'en': 'Do not allow location sharing',
  },

  'whyLocationShare': {
    'fi':
        'Sijainnin jakaminen tulee olla päällä, jotta pystymme paikantamaan sinut avuntarpeessa ja auttajan roolissa. Jos poistat käytöstä sijainnin jakamisen, et saa ilmoituksia apua tarvitsevilta.',
    'en':
...

  'fNameMaxLen2': {
    'fi': ' merkkiä!',
    'en': ' characters!',
  },

  'fName': {
    'fi': 'Etunimi',
    'en': 'First name',
  },

  'surnameQuery': {
    'fi': 'Anna sukunimesi',
...
  'phoneNum': {
    'fi': 'Puhelinnumero',
    'en': 'Phone number',
  },

  'save': {
    'fi': 'Tallenna',
    'en': 'Save',
  },

  'infoSaved': {
    'fi': 'Tiedot tallennettu',
    'en': 'User information has been saved',
  },
...
