...
                              Center(
                                child: DropdownButton<String>(
                                  style: const TextStyle(
                                    fontFamily: 'Baskerville',
                                    color: Colors.black
                                    ),
                                  key: const ValueKey('languageStartDropdown'),
                                  value: appState.languageName,
                                  onChanged: (String? value) {
                                    setLanguage(value!);
                                  },
                                  items: appState.allLanguages.keys
                                      .toList()
...
                      fontWeight: FontWeight.bold
                      ),
                ))),
          ),
          const SizedBox(height: 5.0),
          TextFormField(
            key: const ValueKey('sName'),
            style: const TextStyle(
              color: Colors.white, 
              fontSize: 20,
              fontFamily: 'Baskerville'
              ),
            textAlign: TextAlign.center,
...
                      fontWeight: FontWeight.bold
                      ),
                ))),
          ),
          const SizedBox(height: 5.0),
          TextFormField(
            key: const ValueKey('phone'),
            style: const TextStyle(
              color: Colors.white, 
              fontSize: 20,
              fontFamily: 'Baskerville'
              ),
            textAlign: TextAlign.center,
...
