...
    'HELP_DIALOG': 6,
    'MINOR_HELP_DIALOG': 7
  };

  Map get tutorialSteps => _tutorialSteps;

  final Map _allLanguages = {'SUOMI': 'fi', 'ENGLISH': 'en'};

  String get appEnv => _appEnv;

  Map get allLanguages => _allLanguages;

  String get language => _language;
...
