...
  final GlobalKey _snowTypeKey = GlobalKey();
  final GlobalKey _userInfoKey = GlobalKey();
  final GlobalKey _serviceInfo = GlobalKey();
  final GlobalKey _appNameKey = GlobalKey();
  final GlobalKey _privacyKey = GlobalKey();
  final GlobalKey _languageDropdownKey = GlobalKey();
  final ValueKey _languageKey = const ValueKey('languageSideDropdown');

  @override
  void initState() {
    super.initState();
  }

...
