...
          controller.runJavascript("""
                      window.changeLanguageTo("$languageToChangeTo");
                    """);
        });
      },
      javascriptMode: JavascriptMode.unrestricted,
      key: const Key('snowConditionWebView'),
    );
  }

  Future<bool> onBackButtonPress(AppState appState) async {
    if (_globalKey.currentState?.isDrawerOpen == true) {
      Navigator.of(context).pop();
...
